--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ div {
 @media screen and (min-width: 772px) {
     div {
         width: 45vw;
-        float: left;
+        display: inline-block;
         box-sizing: border-box;
     }
 
@@ -57,5 +57,13 @@ div {
 @media screen and (min-width: 998px) {
     div {
         width: 30vw;
+        display: inline-block;
+        box-sizing: border-box;
+    }
+
+    div img {
+        max-height: 30vh;
+        width: auto;
+        height: auto;
     }
 }
